# good-time-finder

./: ALGORITHM_TUNING_LOG.md  ALGO_UPGRADE_PRD.md  DATA_COLLECTION_PRD.md  PLAN.md  README.md  REPORT_ALGO_PLAN.md  cli.py  fix_generator.py  fix_ui_scaling.py  life_predictor_ui.html  patch_pdf_builder.py  patch_report.py  patch_sade_sati_dict.py  patch_weights.py  pyproject.toml  test_swe.py
app/api/: main.py
app/astrology/: ashtakavarga.py  avasthas.py  bhrigu.py  calculations.py  dasha.py  divisional_charts.py  double_transit.py  drishti.py  extra_yogas.py  gochara.py  gulika_mandi.py  houses_info.py  jaimini.py  kp.py  lal_kitab.py  nadi.py  nakshatra_predictions.py  panchang.py  personality_info.py  planets_info.py  remedies_pro.py  sade_sati.py  shadbala.py  special_conditions.py  sudarshana.py  tara_bala.py  yogas.py
app/config/: __init__.py  events.yaml
app/core/: dasha_engine.py  domain_scorer.py  engine.py  enums.py  life_timeline.py  models.py  ranking.py  scoring.py  windows.py  (+1 more)
scripts/: additional_personalities.py  backtest_personalities.py  backtest_results.json  extract_features.py  optimization_dataset.json  optimize_weights.py  train_rf_model.py
tests/: test_api.py  test_category_differentiation.py  test_dasha.py  test_extra_yogas.py  test_gochara.py  test_heatmap_dynamics.py  test_kp_dynamic.py  test_life_predictor_narrative.py  test_normalization.py  test_panchang.py  test_ranking.py  test_report.py  test_report_heatmap_alignment.py  test_rules.py  test_scoring.py  test_shadbala.py  test_special_conditions.py  test_windows.py  test_yogas.py
(+25 files in other folders)
